# preprint-sentinel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  2026-04-09_AUDIT.md  2026-04-10_AUDIT.md  2026-04-15_AUDIT.md  2026-04-19_AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile.pipeline  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 0dafeb7c9b81_add_dashboard_tables.py  a0314de3b571_initial_schema.py  c3f8a1b9d402_add_composite_index_posted_date_stage.py  d4e5f6a7b8c9_cascade_deletes_and_language_index.py  e6f7a8b9c0d1_sync_missing_schema.py  f1a2b3c4d5e6_add_feed_query_composite_index.py
dashboard/: .env.example  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  proxy.ts  tailwind.config.ts  vitest.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: analyst-notes.tsx  analytics-charts.tsx  audit-trail.tsx  client-timestamp.tsx  coverage-heatmap.tsx  dimension-bar.tsx  enrichment-card.tsx  kpi-card.tsx  markdown.tsx  methods-viewer.tsx  paper-card.tsx  paper-coverage-heatmap.tsx  paper-filters.tsx  pipeline-backlog.tsx  pipeline-controls.tsx  pipeline-progress.tsx  related-papers.tsx  review-status-select.tsx  risk-panel.tsx  run-history-table.tsx  settings-form.tsx  sidebar.tsx  theme-toggle.tsx  user-management.tsx
demo/: package-lock.json  package.json  recording.jsonc
docs/: ANALYST-GUIDE.md  API.md  DEVELOPMENT.md  ESCALATION-TEMPLATE.md  OPERATIONS.md  SCORING-RUBRIC.md  deployment-plan.md  risk-dimensions-analysis.md  search-setup.md
pipeline/: Dockerfile  __main__.py  alerts.py  api.py  config.py  db.py  http_retry.py  logging.py  models.py  orchestrator.py  scheduler.py
scripts/: backfill_missing_tiers.py  backup_db.py  fix_json_parsing_bug.py  fix_remote_auth_tables.py  monitor_data_corruption.py  restore_db.py  resume_pipeline.py  setup-production-search.py
tests/: conftest.py  test_adjudication.py  test_alerts.py  test_api.py  test_arxiv.py  test_biorxiv.py  test_coarse_filter.py  test_config.py  test_crossref.py  test_db.py  test_dedup.py  test_enricher.py  test_europepmc.py  test_html_parser.py  test_http_retry.py  test_ingest.py  test_jats_parser.py  test_llm.py  test_methods_analysis.py  test_models.py  test_openalex.py  test_orchestrator.py  test_orcid.py  test_prompts.py  test_pubmed.py  test_retriever.py  test_scheduler.py  test_semantic_scholar.py  test_unpaywall.py  test_zenodo.py
(+87 files in other folders)
