[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "durc-triage"
version = "0.1.0"
description = "AI-enabled pipeline for triaging dual-use research of concern in preprints"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "structlog>=24.0.0,<26.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rapidfuzz>=3.9.0,<4.0.0",
    "lxml>=5.2.0,<7.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "pymupdf>=1.27.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "respx>=0.22.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
check_untyped_defs = false
ignore_missing_imports = true

# Gradually remove overrides as type coverage improves
[[tool.mypy.overrides]]
module = ["pipeline.orchestrator", "pipeline.triage.*"]
ignore_errors = true

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
